objects/book__c.object
<CustomObject>
    <fields>
        <fullName>Present__c</fullName>
        <label>Present</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>book</label>
    <nameField>
        <label>book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>